# ef-telecommunication-device-management-system

./: .dockerignore  .env.dist  .gitignore  CHANGELOG.md  README.md  docker-compose.yaml  index.html  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
backend/: admin.py  apps.py  asgi.py  authentication.py  permissions.py  urls.py  wsgi.py
backend/fixtures/: 0000_auth.json  0001_user.json  0002_items.json  0003_itembinding.json  0004_eventlogentry.json
backend/lib/: porvision.py
backend/migrations/: 0001_initial.py  0002_radioaccessorytemplate_compatible_with.py  0002_remove_item_handed_out.py  0003_alter_itembinding_item.py  0003_itemtemplate_private.py  0004_alter_eventlogentry_action.py  0004_itemtemplate_polymorphic.py  0005_django6.py  0005_order.py  0006_radiocoding_radiodevicetemplate_coding.py  0007_order_type.py  0008_alter_itemowner_shortname.py  0009_alter_eventlogentry_action.py  0010_callbox_camera_dhcp_callbox_camera_network.py  0011_itemcoordinates_item_coordinates.py  0012_remove_item_coordinates_itemcoordinates_item.py  0013_user_nickname.py
backend/models/: __init__.py  binding.py  callbox.py  eventlog.py  item.py  order.py  phone.py  radio.py  user.py
backend/serializers/: binding.py  callbox.py  eventlog.py  item.py  itemcoordinates.py  mixins.py  order.py  phone.py  radio.py  user.py
backend/settings/: __init__.py  corsheaders.py  django.py  drf_spectacular.py  efrms.py  rest_framework.py
backend/validators/: validators.py
backend/views/: binding.py  callbox.py  eventlog.py  item.py  mixins.py  order.py  phone.py  provision.py  radio.py  statistics.py  user.py
provision/: README.md
src/: App.vue  main.ts
(+99 files in other folders)
