[tool.poetry]
name = "ef-tdms-backend"
version = "1.7.0"
description = "Eurofurence Telecommunication Device Management System"
authors = ["Niels Gandraß <niels@gandrass.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eurofurence/ef-telecommunication-device-management-system"
repository = "https://github.com/eurofurence/ef-telecommunication-device-management-system.git"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.0"
djangorestframework = "^3.15.0"
whitenoise = "^6.5.0"
psycopg-binary = "^3.1.10"
django-environ = "^0.11.2"
argon2-cffi = "^23.1.0"
django-polymorphic = "^3.1.0"
drf-spectacular = "^0.27.0"
django-cors-headers = "^4.2.0"
djangorestframework-simplejwt = "^5.3.0"
django-rest-polymorphic = "^0.1.10"
django-currentuser = "^0.8.0"
daphne = "^4.1.2"
drf-writable-nested = "^0.7.0"
requests = "^2.32.3"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
